Fix a bug with items not showing on resize

--- a/src/Pages/CreateBot/CreateBot.css
+++ b/src/Pages/CreateBot/CreateBot.css
@@ -50,7 +50,7 @@
         grid-template-areas: 
                 "c c b"
                 "a a a";
-        grid-template-columns: auto 3fr;
+        /* grid-template-columns: auto auto auto; */
     }
 
     #create-bot #rigth-side {
